--- a/playbooks/roles/setup_tor/templates/torrc.j2
+++ b/playbooks/roles/setup_tor/templates/torrc.j2
@@ -50,6 +50,6 @@ DirReqStatistics 0
 HiddenServiceStatistics 0
 ExtraInfoStatistics 0
 
-{% for item in torrc_config + tor_config_all + tor_config_group + tor_config_host %}
+{% for item in torrc_config + torrc_config_all + torrc_config_group + torrc_config_host %}
 {{ item.name }} {{ item.value }}
 {% endfor %}
