--- a/playbooks/roles/setup_common/templates/firewall-ipv6.sh.j2
+++ b/playbooks/roles/setup_common/templates/firewall-ipv6.sh.j2
@@ -56,7 +56,7 @@ function addRules() {
 #######################################################################
 set -euf
 
-ipt="ip6tables-legacy"
+ipt="ip6tables"
 
 trap clearAll INT QUIT TERM EXIT
 if [[ $1 == "start" ]]; then
