--- a/playbooks/roles/setup_common/templates/build-kernel.sh.j2
+++ b/playbooks/roles/setup_common/templates/build-kernel.sh.j2
@@ -3,20 +3,26 @@
 
 set -euf
 
+j={{ (ansible_facts.memtotal_mb <= 2048) | ternary(1, ansible_facts.processor_vcpus) }}
+suffix=$(date +%Y%m%d-%H%M%S)
+
 cd ~/linux
 
-j={{ (ansible_facts.memtotal_mb <= 2048) | ternary(1, ansible_facts.processor_vcpus) }}
-make -j $j            >/root/make.$$.log
-make modules_install  >/root/make-modules_install.$$.log
-make install          >/root/make-install.$$.log
+make -j $j            >/tmp/make.$suffix.log
+make modules_install  >/tmp/make-modules_install.$suffix.log
+make install          >/tmp/make-install.$suffix.log
 
 kver=$(make kernelversion)
 lver=$(KERNELVERSION=$kver ./scripts/setlocalversion)
 grub_entry="Advanced options for Debian GNU/Linux>Debian GNU/Linux, with Linux $lver"
 sed -i -e "s#^GRUB_DEFAULT=.*#GRUB_DEFAULT=\"${grub_entry}\"#" /etc/default/grub
-update-grub
+
+update-grub           >/tmp/make-grub.$suffix.log
 
 ln -snf $PWD /usr/src/linux
 
-# reboot-required is the safety net if Ansible fails to catch the async result
-{{ fire_and_forget | ternary("reboot", "touch /var/run/reboot-required") }}
+if [[ "${1:-}" == reboot ]]; then
+  reboot
+elif [[ "${1:-}" != no_reboot ]]; then
+  touch /var/run/reboot-required
+fi
