have always a FW in place

--- a/playbooks/roles/setup_common/templates/firewall-ipv4.sh.j2
+++ b/playbooks/roles/setup_common/templates/firewall-ipv4.sh.j2
@@ -58,6 +58,9 @@ set -euf
 
 ipt="iptables"
 
+# test that it works with nf_tables too
+$ipt -nv -L INPUT 1>/dev/null
+
 trap clearAll INT QUIT TERM EXIT
 if [[ $1 == "start" ]]; then
   clearAll
