--- a/playbooks/roles/setup_common/templates/firewall-ipv6.sh.j2
+++ b/playbooks/roles/setup_common/templates/firewall-ipv6.sh.j2
@@ -57,6 +57,8 @@ function addRules() {
 set -euf
 
 ipt="ip6tables"
+# test that it works with nf_tables too
+$ipt -nv -L INPUT 1>/dev/null
 
 trap clearAll INT QUIT TERM EXIT
 if [[ $1 == "start" ]]; then
