keep log files under /root b/c /tmp is a tmpfs

--- a/playbooks/roles/setup_common/templates/build-kernel.sh.j2
+++ b/playbooks/roles/setup_common/templates/build-kernel.sh.j2
@@ -8,16 +8,16 @@ suffix=$(date +%Y%m%d-%H%M%S)
 
 cd ~/linux
 
-make -j $j            >/tmp/make.$suffix.log
-make modules_install  >/tmp/make-modules_install.$suffix.log
-make install          >/tmp/make-install.$suffix.log
+make -j $j            &>/root/make.$suffix.log
+make modules_install  &>/root/make-modules_install.$suffix.log
+make install          &>/root/make-install.$suffix.log
 
 kver=$(make kernelversion)
 lver=$(KERNELVERSION=$kver ./scripts/setlocalversion)
 grub_entry="Advanced options for Debian GNU/Linux>Debian GNU/Linux, with Linux $lver"
-sed -i -e "s#^GRUB_DEFAULT=.*#GRUB_DEFAULT=\"${grub_entry}\"#" /etc/default/grub
+sed -i -e "s#^GRUB_DEFAULT=.*#GRUB_DEFAULT=\"$grub_entry\"#" /etc/default/grub
 
-update-grub           >/tmp/make-grub.$suffix.log
+update-grub           &>/root/make-grub.$suffix.log
 
 ln -snf $PWD /usr/src/linux
 
@@ -25,4 +25,6 @@ if [[ "${1:-}" == reboot ]]; then
   reboot
 elif [[ "${1:-}" != no_reboot ]]; then
   touch /var/run/reboot-required
+else
+  touch /root/make.finished
 fi
