--- a/playbooks/roles/setup_common/templates/metrics.conf.j2
+++ b/playbooks/roles/setup_common/templates/metrics.conf.j2
@@ -9,17 +9,17 @@ server {
 {% endif %}
 {% endif %}
 
-{% if node_metrics is true %}
+{% if node_metrics %}
   location = /metrics-node {
     proxy_pass http://127.0.0.1:9100/metrics;
   }
 {% endif %}
-{% if tor_metrics is true %}
+{% if tor_metrics is defined and tor_metrics%}
   location = /metrics-tor {
     proxy_pass http://127.0.0.1:9052/metrics;
   }
 {% endif %}
-{% if snowflake_metrics is true %}
+{% if snowflake_metrics is defined and snowflake_metrics %}
   location = /metrics-snowflake {
     proxy_pass http://127.0.0.1:9999/internal/metrics;
   }
