--- a/playbooks/roles/setup_snowflake/templates/snowflake-proxy.service.j2
+++ b/playbooks/roles/setup_snowflake/templates/snowflake-proxy.service.j2
@@ -8,7 +8,7 @@ After=network-online.target docker.socket firewalld.service
 Wants=network-online.target
 
 [Service]
-{% if snowflake_metrics is true %}
+{% if snowflake_metrics %}
 ExecStart=/usr/bin/snowflake-proxy {{ snowflake_command_args }} -metrics -summary-interval 0h0m15s
 {% else %}
 ExecStart=/usr/bin/snowflake-proxy {{ snowflake_command_args }}
