explain why statistics are not send

--- a/playbooks/roles/setup_tor/templates/torrc.j2
+++ b/playbooks/roles/setup_tor/templates/torrc.j2
@@ -44,7 +44,7 @@ MetricsPortPolicy accept 127.0.0.1
 
 SocksPort 0
 
-# explicitly disable defaults too
+# explicitly disable defaults too due to https://gitlab.torproject.org/tpo/core/tor/-/issues/40958
 PaddingStatistics 0
 DirReqStatistics 0
 HiddenServiceStatistics 0
