--- a/playbooks/roles/setup_tor/templates/torrc.j2
+++ b/playbooks/roles/setup_tor/templates/torrc.j2
@@ -33,8 +33,8 @@ SandBox 1
 ORPort {{ ansible_facts.default_ipv4.address }}:{{ tor_port }}
 ORPort [{{ ansible_facts.default_ipv6.address }}]:{{ tor_port }}
 
-{% if _my_family %}
-MyFamily {{ _my_family }}
+{% if my_family %}
+MyFamily {{ my_family }}
 {% endif %}
 
 {% endif %}
