avoid issues if list elements are integers

--- a/playbooks/roles/setup_common/templates/firewall-ipv4.sh.j2
+++ b/playbooks/roles/setup_common/templates/firewall-ipv4.sh.j2
@@ -44,7 +44,7 @@ function addRules() {
 {% for __i in additional_ports %}
 
   # additional port {{ __i }}
-{% if ',' in __i or ':' in __i %}
+{% if __i is search(',') or __i is search(':') %}
   $ipt -A INPUT -p tcp --dst {{ ansible_facts.default_ipv4.address }} --match multiport --dports {{ __i }} -m hashlimit --hashlimit-mode srcip,dstport --hashlimit-srcmask 32 --hashlimit-name port-{{ __i }} --hashlimit-above 6/minute --hashlimit-burst 1 --hashlimit-htable-expire {{ 2 * 60 * 1000 }} -j DROP
   $ipt -A INPUT -p tcp --dst {{ ansible_facts.default_ipv4.address }} --match multiport --dports {{ __i }} --syn -j ACCEPT
 {% else %}
