--- a/playbooks/roles/setup_tor/templates/tor.service.j2
+++ b/playbooks/roles/setup_tor/templates/tor.service.j2
@@ -4,7 +4,7 @@
 Description=Tor
 Documentation=man:tor
 Documentation=https://www.torproject.org/
-After=network-online.target docker.socket firewalld.service
+After=network-online.target docker.socket firewalld.service systemd-networkd-wait-online.service
 Wants=network-online.target
 
 [Service]
