ensure for snowflake proxy, that ipv6 is up before starting it

--- a/playbooks/roles/setup_snowflake/templates/snowflake-proxy.service.j2
+++ b/playbooks/roles/setup_snowflake/templates/snowflake-proxy.service.j2
@@ -4,7 +4,7 @@
 Description=snowflake-proxy
 Documentation=man:snowflake-proxy
 Documentation=https://snowflake.torproject.org/
-After=network-online.target docker.socket firewalld.service
+After=network-online.target docker.socket firewalld.service systemd-networkd-wait-online.service
 Wants=network-online.target
 
 [Service]
