--- a/playbooks/roles/setup_common/templates/nginx.conf.j2
+++ b/playbooks/roles/setup_common/templates/nginx.conf.j2
@@ -1,12 +1,40 @@
 # {{ ansible_managed }}
 
+{% if nginx_listener_default %}
+
+server {
+  listen 80 default_server;
+  listen [::]:80 default_server;
+
+  root /var/www/html;
+
+  index index.html index.htm index.nginx-debian.html;
+
+  server_name _;
+
+  location / {
+    try_files $uri $uri/ =404;
+  }
+}
+{% endif %}
 {% if nginx_metrics %}
+
 server {
   listen 127.0.0.1:8080;
 
   location /metrics {
     stub_status on;
   }
+}
+{% endif %}
+{% if ddos_metrics is defined and ddos_metrics %}
+
+server {
+  listen 127.0.0.1:3305;
+
+  root /var/www/html;
+
+  index torutils.prom;
 }
 {% endif %}
 
@@ -28,6 +56,12 @@ server {
 
   location = /metrics-tor {
     proxy_pass http://127.0.0.1:9052/metrics;
+  }
+{% endif %}
+{% if ddos_metrics is defined and ddos_metrics %}
+
+  location = /metrics-ddos {
+    proxy_pass http://127.0.0.1:3305/;
   }
 {% endif %}
 {% if snowflake_metrics is defined and snowflake_metrics %}
