add ipv6 ports as comment

--- a/playbooks/roles/setup_tor/templates/torrc.j2
+++ b/playbooks/roles/setup_tor/templates/torrc.j2
@@ -38,6 +38,8 @@ ORPort [{{ ansible_facts.default_ipv6.address }}]:{{ tor_port }}
 {% if tor_metrics %}
 MetricsPort 127.0.0.1:9052
 MetricsPortPolicy accept 127.0.0.1
+# MetricsPort [::1]:9052
+# MetricsPortPolicy accept [::1]
 {% endif %}
 
 SocksPort 0
@@ -46,6 +48,7 @@ HardwareAccel 1
 
 # CookieAuthentication 1
 # ControlPort 127.0.0.1:19051
+# ControlPort [::1]:19051
 
 {% for item in torrc_config_log + torrc_config_group + torrc_config_hosts %}
 {{ item.name }} {{ item.value }}
