--- a/playbooks/roles/setup_common/templates/nginx.conf.j2
+++ b/playbooks/roles/setup_common/templates/nginx.conf.j2
@@ -41,6 +41,14 @@ server {
 server {
   listen {{ ansible_facts.default_ipv4.address }}:{{ metrics_port }} ssl http2;
   listen [{{ ansible_facts.default_ipv6.address }}]:{{ metrics_port }} ssl http2;
+
+  ssl_protocols TLSv1.3;
+  ssl_ciphers HIGH:!aNULL:!MD5;
+  ssl_certificate /etc/nginx/conf.d/{{ inventory_hostname }}.crt;
+  ssl_certificate_key /etc/nginx/conf.d/{{ inventory_hostname }}.key;
+  ssl_conf_command Options KTLS;
+
+  add_header Strict-Transport-Security "max-age=63072000" always;
 {% if nginx_metrics %}
 
   location = /metrics-nginx {
@@ -70,14 +78,5 @@ server {
   location = /metrics-snowflake {
     proxy_pass http://127.0.0.1:9999/internal/metrics;
   }
-{% endif %}
-
-  ssl_protocols TLSv1.3;
-  ssl_ciphers HIGH:!aNULL:!MD5;
-  ssl_certificate /etc/nginx/conf.d/{{ inventory_hostname }}.crt;
-  ssl_certificate_key /etc/nginx/conf.d/{{ inventory_hostname }}.key;
-  ssl_conf_command Options KTLS;
-
-  add_header Strict-Transport-Security "max-age=63072000" always;
-}
+{% endif %}}
 {% endif %}
