--- a/playbooks/roles/setup_common/templates/nginx.conf.j2
+++ b/playbooks/roles/setup_common/templates/nginx.conf.j2
@@ -15,6 +15,36 @@ server {
     try_files $uri $uri/ =404;
   }
 }
+
+server {
+  listen {{ ansible_facts.default_ipv4.address }}:443 ssl http2;
+  listen [{{ ansible_facts.default_ipv6.address }}]:443 ssl http2;
+
+  ssl_protocols TLSv1.3;
+  ssl_ciphers HIGH:!aNULL:!MD5;
+  ssl_certificate /etc/nginx/conf.d/{{ inventory_hostname }}.crt;
+  ssl_certificate_key /etc/nginx/conf.d/{{ inventory_hostname }}.key;
+  ssl_conf_command Options KTLS;
+
+  add_header Strict-Transport-Security "max-age=63072000" always;
+
+  index index.html index.htm index.nginx-debian.html;
+
+  root /var/www/html;
+
+  location / {
+    try_files $uri $uri/ =404;
+  }
+
+{% if nginx_hidden_directory %}
+  location /{{ nginx_hidden_directory }}/ {
+    autoindex on;
+    autoindex_exact_size off;
+    autoindex_format html;
+    autoindex_localtime on;
+  }
+}
+{% endif %}
 {% endif %}
 {% if nginx_metrics %}
 
