--- a/playbooks/roles/setup_common/templates/nginx.conf.j2
+++ b/playbooks/roles/setup_common/templates/nginx.conf.j2
@@ -13,6 +13,8 @@ server {
     try_files $uri $uri/ =404;
   }
 }
+{% endif %}
+{% if nginx_listener_default or nginx_site_directory %}
 
 server {
   listen {{ ansible_facts.default_ipv4.address }}:443 ssl http2;
@@ -36,6 +38,8 @@ server {
 
   location /{{ nginx_site_directory }}/ {
     proxy_pass http://127.0.0.1:1234/;
+    access_log off;
+    error_log /dev/null crit;
   }
 {% endif %}
 }
@@ -47,6 +51,9 @@ server {
 
   server_name _1234;
   root /var/www/{{ nginx_site_directory }};
+
+  access_log off;
+  error_log /dev/null crit;
 
   location / {
     autoindex on;
