--- a/playbooks/roles/setup_common/templates/firewall-ipv4.sh.j2
+++ b/playbooks/roles/setup_common/templates/firewall-ipv4.sh.j2
@@ -41,15 +41,15 @@ function addRules() {
   # Prometheus scrape metrics
   $ipt -A INPUT -p tcp --src {{ prometheus_server }} --dst {{ ansible_facts.default_ipv4.address }} --dport {{ metrics_port }} --syn -j ACCEPT
 {%endif %}
-{% for __i in additional_ports %}
+{% for _i in additional_ports %}
 
-  # additional port {{ __i }}
-{% if __i is search(',') or __i is search(':') %}
-  $ipt -A INPUT -p tcp --dst {{ ansible_facts.default_ipv4.address }} --match multiport --dports {{ __i }} -m hashlimit --hashlimit-mode srcip,dstport --hashlimit-srcmask 32 --hashlimit-name port-{{ __i }} --hashlimit-above 60/minute --hashlimit-burst 1 --hashlimit-htable-expire {{ 2 * 60 * 1000 }} -j DROP
-  $ipt -A INPUT -p tcp --dst {{ ansible_facts.default_ipv4.address }} --match multiport --dports {{ __i }} --syn -j ACCEPT
+  # additional port {{ _i }}
+{% if _i is search(',') or _i is search(':') %}
+  $ipt -A INPUT -p tcp --dst {{ ansible_facts.default_ipv4.address }} --match multiport --dports {{ _i }} -m hashlimit --hashlimit-mode srcip,dstport --hashlimit-srcmask 32 --hashlimit-name port-{{ _i }} --hashlimit-above 60/minute --hashlimit-burst 1 --hashlimit-htable-expire {{ 2 * 60 * 1000 }} -j DROP
+  $ipt -A INPUT -p tcp --dst {{ ansible_facts.default_ipv4.address }} --match multiport --dports {{ _i }} --syn -j ACCEPT
 {% else %}
-  $ipt -A INPUT -p tcp --dst {{ ansible_facts.default_ipv4.address }} --dport {{ __i }} -m hashlimit --hashlimit-mode srcip,dstport --hashlimit-srcmask 32 --hashlimit-name port-{{ __i }} --hashlimit-above 60/minute --hashlimit-burst 1 --hashlimit-htable-expire {{ 2 * 60 * 1000 }} -j DROP
-  $ipt -A INPUT -p tcp --dst {{ ansible_facts.default_ipv4.address }} --dport {{ __i }} --syn -j ACCEPT
+  $ipt -A INPUT -p tcp --dst {{ ansible_facts.default_ipv4.address }} --dport {{ _i }} -m hashlimit --hashlimit-mode srcip,dstport --hashlimit-srcmask 32 --hashlimit-name port-{{ _i }} --hashlimit-above 60/minute --hashlimit-burst 1 --hashlimit-htable-expire {{ 2 * 60 * 1000 }} -j DROP
+  $ipt -A INPUT -p tcp --dst {{ ansible_facts.default_ipv4.address }} --dport {{ _i }} --syn -j ACCEPT
 {% endif %}
 {% endfor %}
 }
