calculate times in auto-update only once

--- a/playbooks/roles/setup_autoupdate/templates/apt_timer.j2
+++ b/playbooks/roles/setup_autoupdate/templates/apt_timer.j2
@@ -1,4 +1,4 @@
 [Timer]
 OnCalendar=
-OnCalendar=*-*-* {{ timer_hour }},{{ 12 + timer_hour | int }}:02
+OnCalendar=*-*-* {{ timer_hour1 }},{{ timer_hour2 }}:02
 RandomizedDelaySec=120
