--- a/playbooks/roles/setup_autoupdate/templates/apt_upgrade.j2
+++ b/playbooks/roles/setup_autoupdate/templates/apt_upgrade.j2
@@ -1,3 +1,3 @@
 [Timer]
-OnCalendar=*-*-* {{ timer_hour }},{{ 12 + timer_hour | int }}:10
+OnCalendar=*-*-* {{ timer_hour1 }},{{ timer_hour2 }}:10
 RandomizedDelaySec={{ 20 * 60 }}
