do not cache *.prom files

--- a/playbooks/roles/setup_common/templates/nginx.conf.j2
+++ b/playbooks/roles/setup_common/templates/nginx.conf.j2
@@ -82,6 +82,9 @@ server {
   server_name _3305;
   root /var/www/html;
   index torutils.prom;
+
+  proxy_no_cache 1;
+  proxy_cache_bypass 1;
 }
 {% endif %}
 {% if metrics_port %}
