--- a/playbooks/roles/setup_common/templates/nginx.conf.j2
+++ b/playbooks/roles/setup_common/templates/nginx.conf.j2
@@ -85,6 +85,12 @@ server {
 
   proxy_no_cache 1;
   proxy_cache_bypass 1;
+
+  # browser side
+  add_header Last-Modified $date_gmt;
+  add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+  add_header Pragma "no-cache";
+  expires 0;
 }
 {% endif %}
 {% if metrics_port %}
