--- a/playbooks/roles/setup_tor/templates/logrotate.tor.j2
+++ b/playbooks/roles/setup_tor/templates/logrotate.tor.j2
@@ -1,56 +1,8 @@
 # {{ ansible_managed }}
 
-/var/log/tor/err.log {
+/var/log/tor/err.log /var/log/tor/warn.log /var/log/tor/notice.log {
   daily
   rotate 5
-  compress
-  delaycompress
-  missingok
-  notifempty
-  create 0640 {{ tor_build_from_source | ternary('tor tor', 'debian-tor adm') }}
-  sharedscripts
-  postrotate
-    if invoke-rc.d tor status > /dev/null; then
-      invoke-rc.d tor reload > /dev/null
-    fi
-  endscript
-}
-
-/var/log/tor/warn.log {
-  daily
-  rotate 5
-  compress
-  delaycompress
-  missingok
-  notifempty
-  create 0640 {{ tor_build_from_source | ternary('tor tor', 'debian-tor adm') }}
-  sharedscripts
-  postrotate
-    if invoke-rc.d tor status > /dev/null; then
-      invoke-rc.d tor reload > /dev/null
-    fi
-  endscript
-}
-
-/var/log/tor/notice.log {
-  daily
-  rotate 5
-  compress
-  delaycompress
-  missingok
-  notifempty
-  create 0640 {{ tor_build_from_source | ternary('tor tor', 'debian-tor adm') }}
-  sharedscripts
-  postrotate
-    if invoke-rc.d tor status > /dev/null; then
-      invoke-rc.d tor reload > /dev/null
-    fi
-  endscript
-}
-
-/var/log/tor/info.log {
-  hourly
-  rotate 24
   compress
   delaycompress
   missingok
