--- a/playbooks/roles/setup_common/templates/nginx.conf.j2
+++ b/playbooks/roles/setup_common/templates/nginx.conf.j2
@@ -14,7 +14,7 @@ server {
   }
 }
 {% endif %}
-{% if nginx_listener_default or nginx_site_directory %}
+{% if nginx_listener_default or nginx_site_directories | length > 0 %}
 
 server {
   listen {{ ansible_facts.default_ipv4.address }}:443 ssl http2;
@@ -34,23 +34,24 @@ server {
   location / {
     try_files $uri $uri/ =404;
   }
-{% if nginx_site_directory %}
+{% if nginx_site_directories | length > 0 %}
+{% for site in nginx_site_directories %}
 
-  location /{{ nginx_site_directory }}/ {
-    proxy_pass http://127.0.0.1:1234/;
-    access_log off;
-    error_log /dev/null crit;
+  location /{{ site.path }}/ {
+    proxy_pass http://127.0.0.1:{{ site.port }}/;
   }
+{% endfor %}
 {% endif %}
 }
 {% endif %}
-{% if nginx_site_directory %}
+{% if nginx_site_directories | length > 0 %}
+{% for site in nginx_site_directories %}
 
 server {
-  listen 127.0.0.1:1234;
+  listen 127.0.0.1:{{ site.port }};
 
-  server_name _1234;
-  root /var/www/{{ nginx_site_directory }};
+  server_name _{{ site.port }};
+  root /var/www/{{ site.path }};
 
   access_log off;
   error_log /dev/null crit;
@@ -62,6 +63,7 @@ server {
     autoindex_localtime on;
   }
 }
+{% endfor %}
 {% endif %}
 {% if nginx_metrics %}
 
