--- a/playbooks/roles/setup_common/templates/nginx.conf.j2
+++ b/playbooks/roles/setup_common/templates/nginx.conf.j2
@@ -1,5 +1,5 @@
 # {{ ansible_managed }}
-{% if nginx_listener_default %}
+{% if nginx_public_site %}
 
 server {
   listen {{ ansible_facts.default_ipv4.address }}:80 default_server;
@@ -14,7 +14,7 @@ server {
   }
 }
 {% endif %}
-{% if nginx_listener_default or nginx_site_directories | length > 0 %}
+{% if nginx_public_site or nginx_site_directories %}
 
 server {
   listen {{ ansible_facts.default_ipv4.address }}:443 ssl http2;
@@ -34,7 +34,7 @@ server {
   location / {
     try_files $uri $uri/ =404;
   }
-{% if nginx_site_directories | length > 0 %}
+{% if nginx_site_directories %}
 {% for site in nginx_site_directories %}
 
   location /{{ site.path }}/ {
@@ -44,7 +44,7 @@ server {
 {% endif %}
 }
 {% endif %}
-{% if nginx_site_directories | length > 0 %}
+{% if nginx_site_directories %}
 {% for site in nginx_site_directories %}
 
 server {
