--- a/playbooks/roles/setup_common/templates/nginx.conf.j2
+++ b/playbooks/roles/setup_common/templates/nginx.conf.j2
@@ -121,30 +121,35 @@ server {
 
   location = /metrics-nginx {
     proxy_pass http://127.0.0.1:8080/;
+    access_log off;
   }
 {% endif %}
 {% if node_metrics %}
 
   location = /metrics-node {
     proxy_pass http://127.0.0.1:9100/metrics;
+    access_log off;
   }
 {% endif %}
 {% if tor_metrics is defined and tor_metrics %}
 
   location = /metrics-tor {
     proxy_pass http://127.0.0.1:9052/metrics;
+    access_log off;
   }
 {% endif %}
 {% if ddos_metrics is defined and ddos_metrics %}
 
   location = /metrics-ddos {
     proxy_pass http://127.0.0.1:3305/;
+    access_log off;
   }
 {% endif %}
 {% if snowflake_metrics is defined and snowflake_metrics %}
 
   location = /metrics-snowflake {
     proxy_pass http://127.0.0.1:9999/internal/metrics;
+    access_log off;
   }
 {% endif %}
 }
