teach systemd to infinitely try to restart a failed service

--- a/playbooks/roles/setup_snowflake/templates/snowflake-proxy.service.j2
+++ b/playbooks/roles/setup_snowflake/templates/snowflake-proxy.service.j2
@@ -6,6 +6,7 @@ Documentation=man:snowflake-proxy
 Documentation=https://snowflake.torproject.org/
 After=network-online.target docker.socket firewalld.service systemd-networkd-wait-online.service
 Wants=network-online.target
+StartLimitInterval=0
 
 [Service]
 ExecStart=/usr/bin/snowflake-proxy {{ snowflake_command_args }}
