--- a/playbooks/roles/setup_common/templates/firewall-ipv4.sh.j2
+++ b/playbooks/roles/setup_common/templates/firewall-ipv4.sh.j2
@@ -36,7 +36,7 @@ function addRules() {
 
   # DHCPv4
   $ipt -A INPUT -p udp --dport 68 -j ACCEPT
-{% if metrics_port and prometheus_server %}
+{% if metrics_port > 0 and prometheus_server | length > 0 %}
 
   # Prometheus scrape metrics
   $ipt -A INPUT -p tcp --src {{ prometheus_server }} --dst {{ ansible_facts.default_ipv4.address }} --dport {{ metrics_port }} --syn -j ACCEPT
