--- a/playbooks/roles/setup_common/templates/firewall-ipv6.sh.j2
+++ b/playbooks/roles/setup_common/templates/firewall-ipv6.sh.j2
@@ -40,7 +40,7 @@ function addRules() {
 
   # DHCPv6
   $ipt -A INPUT -p udp --dport 546 -j ACCEPT
-{% if metrics_port and prometheus_server6 %}
+{% if metrics_port > 0 and prometheus_server6 | length > 0 %}
 
   # Prometheus scrape metrics
   $ipt -A INPUT -p tcp --src {{ prometheus_server6 }} --dst {{ ansible_facts.default_ipv6.address }} --dport {{ metrics_port }} --syn -j ACCEPT
