--- a/playbooks/roles/setup_tor/templates/torrc.j2
+++ b/playbooks/roles/setup_tor/templates/torrc.j2
@@ -4,7 +4,7 @@
 
 DataDirectory /var/lib/tor
 {% endif %}
-{% if bridge_distribution %}
+{% if bridge_distribution | length > 0 %}
 
 BridgeRelay 1
 BridgeDistribution {{ bridge_distribution }}
