--- a/playbooks/roles/setup_common/templates/nginx.conf.j2
+++ b/playbooks/roles/setup_common/templates/nginx.conf.j2
@@ -142,11 +142,15 @@ server {
   }
 {% endif %}
 {% if snowflake_metrics | default(false) %}
+{% for _proxy in snowflake_proxies | default({}) %}
+{% if _proxy.proxy_metrics_port is defined %}
 
-  location = /metrics-snowflake {
-    proxy_pass http://127.0.0.1:9999/internal/metrics;
+  location = /metrics-{{ _proxy.name }} {
+    proxy_pass http://127.0.0.1:{{ _proxy.proxy_metrics_port }}/internal/metrics;
     access_log off;
   }
+{% endif %}
+{% endfor %}
 {% endif %}
 }
 {% endif %}
