--- a/playbooks/roles/setup_snowflake/templates/snowflake-proxy.service.j2
+++ b/playbooks/roles/setup_snowflake/templates/snowflake-proxy.service.j2
@@ -1,17 +1,16 @@
 # {{ ansible_managed }}
 
 [Unit]
-Description=snowflake-proxy
-Documentation=man:snowflake-proxy
-Documentation=https://snowflake.torproject.org/
+Description={{ item.name }}
+Documentation={{ item.git_url }}
 After=network-online.target docker.socket firewalld.service systemd-networkd-wait-online.service
 Wants=network-online.target
 StartLimitInterval=0
 
 [Service]
-ExecStart=/usr/bin/snowflake-proxy {{ snowflake_command_args }}
-User=snowflake
-Group=snowflake
+ExecStart=/usr/bin/{{ item.name }} {{ item.command_args }}
+User={{ item.name }}
+Group={{ item.name }}
 # https://www.freedesktop.org/software/systemd/man/systemd.exec.html#Sandboxing
 ProtectSystem=strict
 ProtectHome=tmpfs
