--- a/playbooks/roles/setup_tor/templates/torrc.j2
+++ b/playbooks/roles/setup_tor/templates/torrc.j2
@@ -5,6 +5,7 @@
 DataDirectory /var/lib/tor
 {% endif %}
 {% if bridge_distribution | length > 0 %}
+{# Tor bridge #}
 
 BridgeRelay 1
 BridgeDistribution {{ bridge_distribution }}
@@ -20,6 +21,7 @@ ExtORPort auto
 ServerTransportPlugin obfs4 exec /usr/bin/{{ tor_build_from_source | ternary('lyrebird', 'obfs4proxy') }}
 ServerTransportListenAddr obfs4 0.0.0.0:{{ tor_port }}
 {% else %}
+{# Tor server #}
 
 ExitRelay 0
 NoExec 1
@@ -40,6 +42,7 @@ MetricsPortPolicy accept 127.0.0.1
 # MetricsPort [::1]:9052
 # MetricsPortPolicy accept [::1]
 {% endif %}
+{# common part #}
 
 SocksPort 0
 
