--- a/playbooks/roles/setup_common/templates/nginx.conf.j2
+++ b/playbooks/roles/setup_common/templates/nginx.conf.j2
@@ -14,7 +14,7 @@ server {
   }
 }
 {% endif %}
-{% if nginx_public_site or nginx_site_directories | default([]) | length > 0 %}
+{% if nginx_public_site or nginx_site_directories | length > 0 %}
 
 server {
   listen {{ ansible_facts.default_ipv4.address }}:443 ssl http2;
@@ -34,7 +34,7 @@ server {
   location / {
     try_files $uri $uri/ =404;
   }
-{% if nginx_site_directories | default([]) | length > 0 %}
+{% if nginx_site_directories | length > 0 %}
 {% for site in nginx_site_directories %}
 
   location /{{ site.secret | default(site.dir) }}/ {
@@ -44,7 +44,7 @@ server {
 {% endif %}
 }
 {% endif %}
-{% if nginx_site_directories | default([]) | length > 0 %}
+{% if nginx_site_directories | length > 0 %}
 {% for site in nginx_site_directories %}
 
 server {
