--- a/playbooks/roles/setup_snowflake/templates/snowflake-proxy.service.j2
+++ b/playbooks/roles/setup_snowflake/templates/snowflake-proxy.service.j2
@@ -8,7 +8,7 @@ Wants=network-online.target
 StartLimitInterval=0
 
 [Service]
-ExecStart=/usr/bin/{{ item.name }} {{ item.command_args }}
+ExecStart=/usr/bin/{{ item.name }} {{ item.command_args | default('') }}
 User={{ item.name }}
 Group={{ item.name }}
 # https://www.freedesktop.org/software/systemd/man/systemd.exec.html#Sandboxing
