--- a/playbooks/roles/setup_common/templates/firewall-ipv6.sh.j2
+++ b/playbooks/roles/setup_common/templates/firewall-ipv6.sh.j2
@@ -64,7 +64,7 @@ set -euf
 ipt="ip6tables"
 
 # jump out if this fails
-$ipt -nv -L INPUT 1>/dev/null
+$ipt -nv -L INPUT >/dev/null
 
 trap clearAll INT QUIT TERM EXIT
 if [[ $1 == "start" ]]; then
