kick away variable "torrc_config_log"

--- a/playbooks/roles/setup_tor/templates/torrc.j2
+++ b/playbooks/roles/setup_tor/templates/torrc.j2
@@ -46,6 +46,10 @@ SocksPort 0
 
 HardwareAccel 1
 
-{% for item in torrc_config_log + torrc_config_group + torrc_config_hosts %}
+Log notice file /var/log/tor/notice.log
+Log warn file /var/log/tor/warn.log
+Log err file /var/log/tor/err.log
+
+{% for item in torrc_config_group + torrc_config_hosts %}
 {{ item.name }} {{ item.value }}
 {% endfor %}
