--- a/playbooks/roles/setup_autoupdate/templates/apt_upgrade.j2
+++ b/playbooks/roles/setup_autoupdate/templates/apt_upgrade.j2
@@ -1,5 +1,5 @@
 [Timer]
 OnCalendar=
-OnCalendar=*-*-* {{ timer_hour1 }}:15
+OnCalendar=*-*-* {{ timer_hour1 }},{{ timer_hour2 }}:15
 RandomizedDelaySec=10m
 Persistent=false
